# SurakshaAI

./: .catalystrc  .env.example  .flake8  .gitignore  15072026.md  CATALYST_DEPLOYMENT_PLAN.md  CATALYST_TABLE_SCHEMA.md  Catalyst_Deployment_and_Clean_Architecture_Guide.md  KSP_SURAKSHA_AI_MASTER_SPEC.md  LICENSE  Makefile  README.md  STATUS.md  architecture_audit_report.md  catalyst-user-rules.json  catalyst.json  deploy_analytics_cron.ps1  deploy_analytics_cron.py  design.md  docker-compose.yml  import_config.json  import_data.py  import_remaining.py  jest-out.txt  jest-output.txt  jest-output2.txt  jest-output3.txt  jest-output4.txt  next.config.ts  opencode.json  pyproject.toml  requirements.txt  seed_catalyst.py  status_180726.md  tailwind.config.ts  tsconfig.json
.agents/rules/: ponytail.md  ruflo.md
.claude/: launch.json
.claude-flow/agents/: store.json
.claude-flow/hive-mind/: state.json
.cursor/rules/: ponytail.mdc  ruflo.mdc
.swarm/: model-router-state.json
ai_engine/: __init__.py  quickml_adapter.py  requirements.txt  zia_adapter.py
ai_engine/agents/: chat_agent.py
ai_engine/embeddings/: generator.py
ai_engine/explainability/: explainer.py
ai_engine/forecasting/: predictor.py
ai_engine/graph/: network_analyzer.py
ai_engine/profiling/: suspect_profiler.py
ai_engine/prompts/: templates.py
ai_engine/rag/: retriever.py
ai_engine/sql_generator/: translator.py
ai_engine/workflow/: orchestrator.py
backend/: .env.example  api_gateway.py  catalyst_function_config.json  main.py  requirements.txt
backend/app/: schemas.py  seed.py
backend/configuration/: cache_config.py  database.py  datastore_config.py
backend/controllers/: analytics_controller.py  auth_controller.py  chat_controller.py  dashboard_controller.py  map_controller.py  network_controller.py  report_controller.py
backend/middleware/: logging_middleware.py
backend/models/: accused.py  behavior_profile.py  crime_pattern.py  datastore_models.py  investigation.py
backend/repositories/: __init__.py  base.py  case_repository.py  chat_repository.py  user_repository.py
backend/routes/: __init__.py  analytics.py  auth.py  chat.py  dashboard.py  map.py  network.py  report.py
backend/services/: analytics_service.py  auth_service.py  chat_service.py  map_service.py  report_service.py
backend/utilities/: logger.py
catalyst/: auth-config.json  cron-config.json  gateway-config.json  pipeline.yaml  project-config.json
catalyst_import_data/: Accused.csv  CaseMaster.csv  CrimeHead.csv  CrimeSubHead.csv  District.csv  Unit.csv
config/: constants.py  feature_flags.py  settings.py
data/: Accused.csv  Act.csv  ActSectionAssociation.csv  Alert.csv  AppUserProfile.csv  ArrestSurrender.csv  BehaviorProfile.csv  BusinessGlossary.csv  CaseCategory.csv  CaseMaster.csv  CaseStatusMaster.csv  CaseTransactionAssociation.csv  CasteMaster.csv  ChargesheetDetails.csv  ChatContext.csv  ComplainantDetails.csv  Court.csv  CrimeHead.csv  CrimeHeadActSection.csv  CrimePattern.csv  CrimeSubHead.csv  Designation.csv  District.csv  Employee.csv  FeatureFlag.csv  FinancialAccount.csv  FinancialTransaction.csv  GravityOffence.csv  Inv_OccuranceTime.csv  ModelRegistry.csv  NLSQLExample.csv  OccupationMaster.csv  Prediction.csv  PromptTemplateRegistry.csv  Rank.csv  ReligionMaster.csv  RolePermission.csv  SchemaMetadata.csv  Section.csv  State.csv  (+6 more)
database/: data_generator.py  indexes.sql  schema_ksp.sql  schema_prototype.sql  seed_data.py
database/backups/: .gitkeep
database/migrations/: README.md
database/schemas/: spatial.py
database/seed/: seed_data.py
database/sql/: init-db.sql
docker/backend/: Dockerfile
docker/database/: README.md
docker/frontend/: Dockerfile
docs/: API_CONTRACT.md  ARCHITECTURE_DECISIONS.md  DATA_GAP_ANALYSIS.md  DATA_GENERATION.md  DEMO_SCRIPT.md  IMPLEMENTATION_STATUS.md  KNOWN_LIMITATIONS.md  TECHNICAL_SUPPORT_ROLE.md  UI.md  catalyst_datastore_schema.md  resources_communication.md
docs/api/: endpoints.md
docs/architecture/: coding_standards.md  git_strategy.md  overview.md
docs/database/: data_dictionary.md
docs/meeting_notes/: notes.md
docs/uml/: sequence_diagram.md
frontend/: catalyst.json  client-package.json  lovable_prompt.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/assets/: README.md
frontend/context/: auth-context.tsx
frontend/hooks/: use-auth.ts
frontend/layouts/: dashboard-layout.tsx
frontend/models/: types.ts
frontend/pages/: .gitkeep
frontend/public/: README.md
frontend/services/: api.ts
frontend/src/: App.tsx  KarnatakaMap.tsx  NetworkGraph.tsx  Tour.tsx  api.ts  components.tsx  context.tsx  i18n.ts  styles.css
frontend/utils/: helpers.ts
functions/: main.py
functions/ai/: answer_generator.py  case_summarizer.py  confidence_classifier.py  entity_extractor.py  grounding_validator.py  intent_classifier.py  nl2sql_engine.py  query_planner.py  quickml_client.py  rag_retriever.py
functions/analytics/: report_generator.py  sociological_analyzer.py  stats_aggregator.py  trend_analyzer.py
functions/analytics_cron/: catalyst-config.json  main.py  requirements.txt
jobs/: scheduled_alerts.py  scheduled_forecast.py
models/: dto.py  dto_legacy.bak.py
scripts/: .gitkeep  create_tables.js  create_tables_v2.js  fix_imports.py  generate_import_csv.py  generate_lovable_prompt.py  generate_seed_csvs.py  import_all_data.bat  import_all_data.ps1  import_all_data_production.bat  import_all_data_production.ps1  precomputed_tables_conspec.json  prepare_deploy.py  reset_demo.py  seed_kb.py
suraksha-dashboard/: client-package.json  jest.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
tests/: test_analytics.py  test_auth.py  test_chat_queries.py  test_e2e.py  test_entity_resolution.py  test_failure_modes.py  test_forecast.py  test_legacy_analytics.py  test_legacy_forecast.py  test_nl2sql_accuracy.py  test_pii_masking.py  test_rbac.py  test_score_reproducibility.py  test_sql_security.py
(+362 files in other folders)
