[tool.poetry]
name = "suraksha-ai"
version = "0.1.0"
description = "Crime Intelligence Platform for Karnataka Police"
authors = ["Suraksha AI Architect <architect@suraksha.ai>"]
readme = "README.md"
packages = [
    { include = "backend" },
    { include = "ai_engine" }
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.1" }
pydantic = { extras = ["email"], version = "^2.7.4" }
pydantic-settings = "^2.3.4"
SQLAlchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
geoalchemy2 = "^0.15.1"
PyJWT = "^2.8.0"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
cryptography = "^42.0.8"
langchain = "^0.2.5"
langchain-core = "^0.2.9"
langchain-community = "^0.2.5"
langgraph = "^0.0.60"
faiss-cpu = "^1.8.0.post1"
sentence-transformers = "^3.0.1"
networkx = "^3.3"
redis = "^5.0.6"
numpy = "^1.26.4"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
matplotlib = "^3.9.0"
reportlab = "^4.2.0"
python-multipart = "^0.0.9"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"
structlog = "^24.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
black = "^24.4.2"
flake8 = "^7.1.0"
mypy = "^1.10.0"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
avoid_as_keyword = true

[[tool.mypy.overrides]]
module = [
    "sqlalchemy.*",
    "geoalchemy2.*",
    "langchain.*",
    "langgraph.*",
    "faiss.*",
    "sentence_transformers.*",
    "networkx.*",
    "redis.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
asyncio_mode = "auto"
python_files = "test_*.py"
