[tool.poetry]
name = "suraksha-ai"
version = "0.1.0"
description = "Crime Intelligence Platform for Karnataka Police (Catalyst)"
authors = ["Suraksha AI Architect <architect@suraksha.ai>"]
readme = "README.md"
packages = [
    { include = "backend" },
    { include = "ai_engine" }
]

[tool.poetry.dependencies]
python = "^3.10"

# --- Catalyst SDKs ---
catalyst-sdk-python = ">=2.0.0"

# --- Web Framework & ASGI Server ---
fastapi = ">=0.111.0"
uvicorn = { extras = ["standard"], version = ">=0.30.1" }
pydantic = { extras = ["email"], version = ">=2.7.4" }
pydantic-settings = ">=2.3.4"

# --- Mangum for Serverless ---
mangum = ">=0.17.0"

# --- Data Science, Analytics & Reporting ---
numpy = ">=1.26.4"
pandas = ">=2.2.2"
scikit-learn = ">=1.5.0"
matplotlib = ">=3.9.0"
reportlab = ">=4.2.0"

# --- Utilities ---
python-multipart = ">=0.0.9"
httpx = ">=0.27.0"
python-dotenv = ">=1.0.1"
structlog = ">=24.2.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2.2"
pytest-asyncio = ">=0.23.7"
black = ">=24.4.2"
flake8 = ">=7.1.0"
mypy = ">=1.10.0"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | \.venv
  | build
  | dist
  | suraksha-dashboard
  | node_modules
)/
'''

[tool.flake8]
max-line-length = 130
extend-ignore = ["E203", "W503", "E731"]
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    ".mypy_cache",
    "node_modules",
    "suraksha-dashboard",
]

[tool.mypy]
python_version = "3.10"
follow_imports = "skip"
warn_return_any = false
warn_unused_configs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = true
ignore_errors = false
exclude = [
    "build/",
    "dist/",
    ".venv/",
    "venv/",
    "node_modules/",
    "suraksha-dashboard/",
]

[[tool.mypy.overrides]]
module = [
    "common.*",
    "functions.suraksha_ai.common.*",
    "models.*",
    "catalyst.*",
    "numpy.*",
    "pandas.*",
    "sklearn.*",
    "matplotlib.*",
    "reportlab.*",
    "tests.*",
]
ignore_missing_imports = true
ignore_errors = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "functions/suraksha_ai/common/tests",
]
asyncio_mode = "auto"
python_files = "test_*.py"
filterwarnings = [
    "ignore::DeprecationWarning",
]
